--- a/blog/package.json
+++ b/blog/package.json
@@ -1,26 +1,38 @@
 {
   "name": "blog",
-  "version": "0.1.0",
+  "version": "22.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p 3019",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.18",
+    "@sanity/cli": "^3.42.1",
+    "@sanity/client": "^6.18.2",
+    "@sanity/image-url": "1",
+    "@sanity/react-loader": "^1.9.19",
+    "@sanity/vision": "^3.42.1",
+    "next": "14.2.3",
+    "next-sanity": "^9.0.20",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "sanity": "3",
+    "styled-components": "6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@sanity/eslint-config-studio": "4.0.0",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5"
   }
 }
