--- a/blog/tsconfig.json
+++ b/blog/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "target": "ES2017"
+    "target": "ES2017",
+    "types": ["@types/react", "@types/node", "@types/prop-types", "@types/json5"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
