--- a/blog/package.json
+++ b/blog/package.json
@@ -3,12 +3,13 @@
   "version": "22.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3019",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@portabletext/react": "^3.0.18",
     "@sanity/cli": "^3.42.1",
     "@sanity/client": "^6.18.2",
