--- a/blog/package.json
+++ b/blog/package.json
@@ -16,10 +16,12 @@
     "@sanity/image-url": "1",
     "@sanity/react-loader": "^1.9.19",
     "@sanity/vision": "^3.42.1",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-sanity": "^9.0.20",
-    "react": "^18",
-    "react-dom": "^18",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "3",
     "styled-components": "6"
   },
@@ -30,9 +32,10 @@
     "@types/prop-types": "^15.7.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
