preview mode to be made for the website

--- a/blog/package.json
+++ b/blog/package.json
@@ -14,9 +14,11 @@
     "@sanity/cli": "^3.42.1",
     "@sanity/client": "^6.18.2",
     "@sanity/image-url": "1",
+    "@sanity/preview-kit": "^5.0.58",
     "@sanity/react-loader": "^1.9.19",
     "@sanity/vision": "^3.42.1",
     "next": "^14.2.3",
+    "next-auth-sanity": "^1.5.3",
     "next-sanity": "^9.0.20",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
