--- a/blog/tsconfig.json
+++ b/blog/tsconfig.json
@@ -23,6 +23,6 @@
     "target": "ES2017",
     "types": ["@types/react", "@types/node", "@types/prop-types", "@types/json5"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/api/exitDraftMode.tsx"],
   "exclude": ["node_modules"]
 }
