--- a/blog/package.json
+++ b/blog/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "3",
+    "sanity-plugin-iframe-pane": "^3.1.6",
     "styled-components": "6"
   },
   "devDependencies": {
