--- a/blog/package.json
+++ b/blog/package.json
@@ -24,6 +24,7 @@
     "nextra-theme-docs": "^2.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-portable-text": "^0.6.0",
     "sanity": "3",
     "sanity-plugin-iframe-pane": "^3.1.6",
     "styled-components": "6"
